--- a/src/styles.css
+++ b/src/styles.css
@@ -21,22 +21,34 @@ canvas:focus {
 }
 
 html {
-	--scrollbar-color: #1f1d1d;
+	--scrollbar-color: rgb(31 29 29);
+	--scrollbar-bg-color: rgb(54 54 54);
+	--scrollbar-line-size: 0.5rem;
 }
 
 body {
 	overflow: auto;
 }
 
-body::-webkit-scrollbar {
-	width: 0.75rem;
+html,
+.scrollbar {
+	scrollbar-color: var(--scrollbar-color) var(--scrollbar-bg-color);
+	scrollbar-width: thin;
 }
 
-body::-webkit-scrollbar-track {
-	background-color: #363636;
+html::-webkit-scrollbar,
+.scrollbar::-webkit-scrollbar {
+	width: var(--scrollbar-line-size);
+	height: var(--scrollbar-line-size);
 }
 
-body::-webkit-scrollbar-thumb {
+html::-webkit-scrollbar-track,
+.scrollbar::-webkit-scrollbar-track {
+	background-color: var(--scrollbar-bg-color);
+}
+
+html::-webkit-scrollbar-thumb,
+.scrollbar::-webkit-scrollbar-thumb {
 	border-radius: 1rem;
 	background-color: var(--scrollbar-color);
 }
